[package]
name = "pse"
version = "1.0.0"
edition = "2021"
authors = ["Alexey Stolpovsky <stolpa413@gmail.com>"]
description = "Getting the recursive sizes of a fileitem"
license = "UNLICENSE"
readme = "README.md"
repository = "https://github.com/stolpa4/pse"
keywords = ["serde", "json", "serialization", "filesystem"]
categories = ["data-structures", "parsing"]

[dependencies]
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

[[bin]]
name = "pse"
path = "src/main.rs"
